# crates/biorouter-server/src/openapi.rs
@@ -412,7 +412,7 @@ derive_utoipa!(Icon as IconSchema);
         super::routes::knowledge::get_graph,
         super::routes::knowledge::list_pages,
         super::routes::knowledge::read_page,
-        super::routes::knowledge::read_page_query,
+        super::routes::knowledge::get_page_body,
         super::routes::knowledge::write_page,
         super::routes::knowledge::list_history,
         super::routes::knowledge::preview_state,
